--- a/src/main/resources/assets/gklogistic/lang/en_us.lang
+++ b/src/main/resources/assets/gklogistic/lang/en_us.lang
@@ -3,4 +3,4 @@ itemGroup.GKLogistic=GKLogistic
 item.gkdebugger.name=Debugger
 
 tile.gkdebugger_block.name=Block of Debugger
-tile.voxel_test.name=Super Vocxel
+tile.gk_tube.name=Super Tube
